k8s_yml/base_process.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: fz-k8s
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.23.2
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: fz-k8s
spec:
  ports:
    - nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: byfn
  namespace: fz-k8s
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    - from:
      - podSelector: {}
  egress:
    - to:
      - podSelector: {}
  policyTypes:
    - Ingress
    - Egress
